--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "blog-away",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://www.karleypetracca.com/blog-away",
+	"homepage": "https://www.karleypetracca.com/blog-away/",
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^1.2.28",
 		"@fortawesome/free-solid-svg-icons": "^5.13.0",
